feat: Calcular métricas de eficiência de um ativo
